# main-stopwatch

./: CMakeLists.txt
components/Hard_Start/: CMakeLists.txt  Hard_Start.c  Kconfig
components/Hard_Start/Encoder/: Encoder.c
components/Hard_Start/Encoder/include/: Encoder.h
components/Hard_Start/JB_T6K71_lcd/: JB_T6K71_lcd.c
components/Hard_Start/JB_T6K71_lcd/include/: JB_T6K71_commands.h  JB_T6K71_lcd.h
components/Hard_Start/SD/: SD.c
components/Hard_Start/SD/include/: SD.h
components/Hard_Start/include/: Hard_Start.h
components/Hard_Start/lvgl_port/: lv_port_disp.c  lv_port_fs.c  lv_port_indev.c
components/Hard_Start/lvgl_port/include/: lv_port_disp.h  lv_port_fs.h  lv_port_indev.h
components/Hard_Start/lvgl_register/: jpeg.c
components/Hard_Start/lvgl_register/include/: jpeg.h
components/UI_stopwatch/: CMakeLists.txt
components/UI_stopwatch/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_themes.c  ui_themes.h
components/UI_stopwatch/ui/components/: ui_comp.c  ui_comp.h  ui_comp_button.c  ui_comp_button.h  ui_comp_hook.c  ui_comp_hook.h
components/UI_stopwatch/ui/images/: ui_img_1837598647.c  ui_img_battery_png.c  ui_img_bicycle_png.c  ui_img_bluetooth_png.c  ui_img_capacitor_png.c  ui_img_circled_play_png.c  ui_img_circuit_png.c  ui_img_contact_png.c  ui_img_copy_png.c  ui_img_data_transfer_png.c  ui_img_double_up_png.c  ui_img_downloads_folder_png.c  ui_img_electronics_png.c  ui_img_favorite_folder_png.c  ui_img_folder_png.c  ui_img_folder_tree_png.c  ui_img_folders_png.c  ui_img_games_folder_png.c  ui_img_general_warning_sign_png.c  ui_img_gps_signal_png.c  ui_img_heater_resistor_png.c  ui_img_image_2_png.c  ui_img_info_png.c  ui_img_insert_button_png.c  ui_img_integrated_circuit_png.c  ui_img_internet_of_things_png.c  ui_img_lcd_png.c  ui_img_led_diode_png.c  ui_img_map_marker_png.c  ui_img_micro_sd_png.c  ui_img_minus_png.c  ui_img_move_node_down_png.c  ui_img_movies_folder_png.c  ui_img_music_folder_png.c  ui_img_my_location_png.c  ui_img_navigation_png.c  ui_img_nintendo_switch_handheld_png.c  ui_img_opened_folder_png.c  ui_img_pause_button_png.c  ui_img_plus_png.c  (+14 more)
components/UI_stopwatch/ui/screens/: ui_APP.c  ui_Bicycle.c  ui_Map.c  ui_QDscreen.c  ui_SETING.c
components/esp_new_jpeg/: README-zh-CN-translation.md
components/lvgl/: CMakeLists.txt  Kconfig  lv_conf.h
components/lvgl/demos/music/: lv_demo_music.c
components/lvgl/env_support/cmake/: esp.cmake
components/lvgl/src/: lv_conf_internal.h
components/lvgl/src/extra/others/ime/: lv_ime_pinyin.c
main/: main.c
