SET(SOURCES components/ui_comp_button.c
    components/ui_comp.c
    screens/ui_QDscreen.c
    screens/ui_APP.c
    screens/ui_SETING.c
    screens/ui_Bicycle.c
    screens/ui_Map.c
    ui_theme_manager.c
    ui_themes.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_image_2_png.c
    images/ui_img_png_png.c
    images/ui_img_settings_png.c
    images/ui_img_folders_png.c
    images/ui_img_navigation_png.c
    images/ui_img_bicycle_png.c
    images/ui_img_electronics_png.c
    images/ui_img_1837598647.c
    images/ui_img_gps_signal_png.c
    images/ui_img_lcd_png.c
    images/ui_img_contact_png.c
    images/ui_img_folder_tree_png.c
    images/ui_img_battery_png.c
    images/ui_img_info_png.c
    images/ui_img_view_more_png.c
    images/ui_img_map_marker_png.c
    images/ui_img_bluetooth_png.c
    images/ui_img_thermometer_png.c
    images/ui_img_schedule_png.c
    images/ui_img_data_transfer_png.c
    images/ui_img_internet_of_things_png.c
    images/ui_img_recharge_battery_png.c
    images/ui_img_double_up_png.c
    images/ui_img_plus_png.c
    images/ui_img_minus_png.c
    images/ui_img_capacitor_png.c
    images/ui_img_circled_play_png.c
    images/ui_img_circuit_png.c
    images/ui_img_copy_png.c
    images/ui_img_downloads_folder_png.c
    images/ui_img_favorite_folder_png.c
    images/ui_img_folder_png.c
    images/ui_img_games_folder_png.c
    images/ui_img_general_warning_sign_png.c
    images/ui_img_heater_resistor_png.c
    images/ui_img_insert_button_png.c
    images/ui_img_integrated_circuit_png.c
    images/ui_img_led_diode_png.c
    images/ui_img_micro_sd_png.c
    images/ui_img_move_node_down_png.c
    images/ui_img_movies_folder_png.c
    images/ui_img_music_folder_png.c
    images/ui_img_my_location_png.c
    images/ui_img_nintendo_switch_handheld_png.c
    images/ui_img_opened_folder_png.c
    images/ui_img_pause_button_png.c
    images/ui_img_processor_png.c
    images/ui_img_resistor_png.c
    images/ui_img_signpost_png.c
    images/ui_img_stop_circled_png.c
    images/ui_img_toggle_off_png.c
    images/ui_img_toggle_on_png.c
    images/ui_img_transistor_png.c
    images/ui_img_zip_png.c)

add_library(ui ${SOURCES})
